<resources>
    <string name="app_name">Re-Circulapp</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="password">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrar</string>
    <string name="iniciar_sesi_n_con_google">Iniciar Sesión con Google</string>
    <string name="registro_con_google">Registrar con Google</string>
    <string name="forgot_pass">Olvidaste tu Contraseña?</string>
    <string name="registro">Registro</string>
    <string name="recoveryPassword">Reestablecer Contraseña</string>
    <string name="send">Enviar</string>
    <string name="information">Información</string>
    <string name="not_register">No existe una cuenta asociado a ese correo</string>
    <string name="is_register">Ya existe una cuenta asociada a ese correo</string>
    <string name="incorrect_pass">Contraseña incorrecta</string>
    <string name="error_signin">No pudimos iniciar sesión, inténtelo más tarde</string>
    <string name="error_network">No hay conexión a internet</string>
    <string name="txt_404">Error al conectar con el servidor</string>
    <string name="txt_201">No existe una cuenta asociada con ese correo</string>
    <string name="response_recovery_pass">Enviamos un mensaje a su direccion de correo electrónico</string>
    <string name="error_recovery_pass">Hubo un error al enviar el correo, contacte a soporte</string>

    <!--Opciones del menu-->
    <string name="locations">Ubicaciones</string>
    <string name="profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estado">Estado</string>
    <string name="genero">Género</string>
    <string name="error_register">Error al registrar, intenténlo nuevamente</string>
    <string name="municipio">Municipio / Localidad</string>
    <string name="producto">Producto</string>
    <string name="servicio">Servicio</string>

    <!--Estados-->
    <string-array name="estados">
        <item>Aguascalientes</item>
        <item>Baja California</item>
        <item>Baja California Sur</item>
        <item>Campeche</item>
        <item>Chiapas</item>
        <item>Chihuahua</item>
        <item>Ciudad de México</item>
        <item>Coahuila</item>
        <item>Colima</item>
        <item>Durango</item>
        <item>Guanajuato</item>
        <item>Guerrero</item>
        <item>Hidalgo</item>
        <item>Jalisco</item>
        <item>Estado de México</item>
        <item>Michoacán</item>
        <item>Morelos</item>
        <item>Nayarit</item>
        <item>Nuevo León</item>
        <item>Oaxaca</item>
        <item>Puebla</item>
        <item>Querétaro</item>
        <item>Quintana Roo</item>
        <item>San Luis Potosí</item>
        <item>Sinaloa</item>
        <item>Sonora</item>
        <item>Tabasco</item>
        <item>Tamaulipas</item>
        <item>Tlaxcala</item>
        <item>Veracruz</item>
        <item>Yucatán</item>
        <item>Zacatecas</item>
    </string-array>

    <string-array name="generos">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <string-array name="productos">
        <item>Calzado y articulos de piel y cuero</item>
        <item>Motocicletas</item>
        <item>Aparatos eléctricos para el hogar y personales</item>
        <item>Equipo eléctronico y de presión</item>
        <item>Artículos para el hogar y personales</item>
        <item>Automóviles y camiones</item>
        <item>Llantas</item>
        <item>Bicicletas</item>
        <item>Maquinaria, equipo comercial y de servicios</item>
        <item>Maquinaria para mover y levantar materiales</item>
        <item>Maquinaria y equipo agropecuario y forestal</item>
    </string-array>

    <string-array name="servicios">
        <item>Reparación</item>
        <item>Mantenimiento</item>
        <item>Hojalatería y pintura</item>
        <item>Lavado y lubricado</item>
        <item>Tapicería</item>
        <item>Instalación de cristales y carrocerías</item>
        <item>Alineación y balanceo</item>
        <item>Auto partes</item>
        <item>Servicio de blindaje y adaptación</item>
    </string-array>

    <string-array name="municipios">
        <item>Álvaro Obregón</item>
        <item>Azcapotzalco</item>
        <item>Benito Juárez</item>
        <item>Coyoacán</item>
        <item>Cuajimalpa</item>
        <item>Cuauhtémoc</item>
        <item>Gustavo A. Madero</item>
        <item>Iztacalco</item>
        <item>Iztapalapa</item>
        <item>Magdalena Contreras</item>
        <item>Miguel Hidalgo</item>
        <item>Milpa Alta</item>
        <item>Tláhuac</item>
        <item>Tlalpan</item>
        <item>Venustiano Carranza</item>
        <item>Xochimilco</item>
    </string-array>
</resources>